Opened 7 years ago
Closed 7 years ago
#13712 closed bug (fixed)
[WebPTranslator] unable to open a file
Reported by: | diver | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Add-Ons/Translators/WEBP | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev51420 x86_64
"Either a file or an image translator for it doesn't exist"
https://github.com/telegramdesktop/tdesktop/blob/dev/Telegram/Resources/art/emoji_125x.webp
Change History (4)
comment:1 by , 7 years ago
comment:2 by , 7 years ago
Status: | new → in-progress |
---|
comment:4 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Note:
See TracTickets
for help on using tickets.
Only Lossy VP8 codec is supported currently, neither VP8L and extended VP8X chunks are. Will try to add those.