WebPTranslator: use libwebp to identify.

Previous hardcoded checks were only aware of VP8 lossy chunk format,
leading to rejecting lossless or newer extended WebP images, while
the libwebp bellow could have handle them fine.

Fix #13712.